--- a/Assignment-2/code/my-app/src/App.css
+++ b/Assignment-2/code/my-app/src/App.css
@@ -1,5 +1,36 @@
 .App {
+  background-color: #eaf2f5a2;
   text-align: center;
+  justify-content: center;
+  height: 1240px;
+}
+
+
+.name-person  p {
+  color: rgb(34, 62, 187);
+  font-size: 60px;
+  font-family: 'Times New Roman', Times, serif;
+
+}
+.details-info {
+  margin-left: 600px;
+}
+.details {
+  margin: 10px;
+  
+  text-align: left;
+  
+}
+.details label {
+  font-size: 16px;
+  color: rgba(0, 0, 0, 0.918);
+}
+.details label, .details strong {
+  display: block;
+}
+.details strong {
+  font-size: 20px;
+  
 }
 
 .App-logo {
@@ -36,3 +67,5 @@
     transform: rotate(360deg);
   }
 }
+
+
